--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.26.0
-pandas==2.1.1
-scikit-learn==1.3.0
-xgboost==1.7.6
-joblib==1.3.0
+streamlit
+pandas
+scikit-learn
+xgboost
+joblib
